Merge wrap-principals portlet change from branch
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@356170 13f79535-47bb-0310-9956-ffa450edef68